# HaineSensei.github.io

./: .gitignore  README.md  RPG_ORIGINAL_DESIGN_EXPLORATION.md  SCRIPTING_LANGUAGE.md  build.sh  index.html  rpg.toml  terminal-website-overview.md
.github/workflows/: deploy.yml
rpg-generator/: Cargo.toml
rpg-generator/src/: main.rs
rust/: Cargo.toml
rust/src/: channels.rs  input_history.rs  js_interop.rs  lib.rs
rust/src/commands/: mod.rs
rust/src/commands/builtin/: content.rs  files.rs  filesystem.rs  misc.rs  mod.rs  pretty.rs  secret.rs
rust/src/filesystem/: abyss.rs  cave_of_dice.rs  file_paths.rs  helpers.rs  mod.rs  types.rs  virtual_fs.rs
scripts/: generate-manifest.py
secret_lair/from_kazuya/: apology.txt
site/: editor.html  game-of-life.html  index.html  pretty.html
site/content/: about.txt  contact.txt  help-verbose.txt  help.txt  test_math.md
site/content/abyss/: !!contents.txt  !!directories.txt  warning.txt
site/content/abyss/level1/: note.txt
site/content/abyss/rpg/: !!directories.txt  README.md
site/content/blog/: making_this.md
site/content/blog/bakh-scripting/: 1_The_Principles.md
site/content/blog/maths/: Perpendicular_Polynomials.md
site/content/manuals/simple/: about.txt  cat.txt  cd.txt  clear.txt  contact.txt  echo.txt  edit.txt  fib.txt  gol.txt  hello.txt  help.txt  info.txt  load-session.txt  load.txt  ls.txt  mkdir.txt  pretty.txt  pwd.txt  rm.txt  rmdir.txt  save-session.txt  save.txt
site/content/manuals/verbose/: cat.txt  cd.txt  clear.txt  edit.txt  gol.txt  help.txt  load-session.txt  load.txt  ls.txt  (+7 more)
(+11 files in other folders)
