[package]
name = "terminal-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = false    # Disable wasm-opt (causes issues with bulk memory)
